tests/modules/texplicit_system_import.nim
import system except `+`

discard """
  errormsg: "undeclared identifier: '+'"
  line: 9
"""


echo 4+5
